# MARS-3D

./: CMakeLists.txt  README.md
assets/materials/: mesh.mat  uv_mesh.mat
assets/shaders/: compile.sh  deferred_buffer.mshader  deferred_light.mshader  forward_buffer.mshader  triangle.mshader
assets/shaders/deferred/: light.mshader  s_mesh.mshader
assets/shaders/deferred/light/: light.vert
assets/shaders/deferred/s_mesh/: s_mesh.frag
assets/shaders/deferred_buffer/: deferred_buffer.frag  deferred_buffer.vert
assets/shaders/deferred_light/: deferred_light.frag
assets/shaders/forward/s_mesh/: s_mesh.frag
assets/shaders/forward_buffer/: forward_buffer.vert
assets/shaders/triangle/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
include/MARS_3D/: mesh_renderer.hpp
include/MVRE_3D/: mesh_renderer.hpp
src/: CMakeLists.txt  mesh_renderer.cpp
